--- a/producer/Dockerfile
+++ b/producer/Dockerfile
@@ -10,4 +10,4 @@ COPY . .
 RUN npm install
 
 # Commande pour installer les node_modules puis exécuter l'application
-CMD npm start
+# CMD npm start
