--- a/consumer/package.json
+++ b/consumer/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "start-ip1" : "NODE_ENV=ip1 node index.js",
+    "start-ip2" : "NODE_ENV=ip2 node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
