--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "9092:9092"
     volumes:
       - "kafka_data:/bitnami"
+      - ./kafka-init.sh:/docker-entrypoint-init.d/kafka-init.sh
     environment:
       # KRaft settings
       - KAFKA_CFG_NODE_ID=0
