--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       POSTGRES_PASSWORD: mypassword
     volumes:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     networks:
@@ -101,3 +102,4 @@ networks:
 
 volumes:
   kafka_data:
+  postgres_data:
